tests/resources/sanitizer_data/ubsan_asan_global_buffer_overflow.txt
crashme.cpp:33:15: runtime error: index 102 out of bounds for type 'int [100]'
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior crashme.cpp:33:15 in 
=================================================================
==6459==ERROR: AddressSanitizer: global-buffer-overflow on address 0x000105422418 at pc 0x00010540b6da bp 0x7ffeea7f5840 sp 0x7ffeea7f5838
READ of size 4 at 0x000105422418 thread T0
    #0 0x10540b6d9 in global_buffer_overflow(int)+0x159 (crashme:x86_64+0x1000016d9)
    #1 0x10540d1a1 in main+0x281 (crashme:x86_64+0x1000031a1)
    #2 0x7fff72dd7cc8 in start+0x0 (libdyld.dylib:x86_64+0x1acc8)

0x000105422418 is located 8 bytes to the right of global variable 'global_array' defined in 'crashme.cpp:18:5' (0x105422280) of size 400
SUMMARY: AddressSanitizer: global-buffer-overflow (crashme:x86_64+0x1000016d9) in global_buffer_overflow(int)+0x159
Shadow bytes around the buggy address:
  0x100020a84430: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100020a84440: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100020a84450: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100020a84460: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100020a84470: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
=>0x100020a84480: 00 00 f9[f9]f9 f9 f9 f9 f9 f9 f9 f9 f9 f9 f9 f9
  0x100020a84490: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100020a844a0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100020a844b0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100020a844c0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100020a844d0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
Shadow byte legend (one shadow byte represents 8 application bytes):
  Addressable:           00
  Partially addressable: 01 02 03 04 05 06 07 
  Heap left redzone:       fa
  Freed heap region:       fd
  Stack left redzone:      f1
  Stack mid redzone:       f2
  Stack right redzone:     f3
  Stack after return:      f5
  Stack use after scope:   f8
  Global redzone:          f9
  Global init order:       f6
  Poisoned by user:        f7
  Container overflow:      fc
  Array cookie:            ac
  Intra object redzone:    bb
  ASan internal:           fe
  Left alloca redzone:     ca
  Right alloca redzone:    cb
  Shadow gap:              cc
==6459==ABORTING
